@@ -1,6 +1,10 @@
+* 2014-09-17 - marcus.klein@open-xchange.com
+
+ - Fix for bug 34467: Documented LoginHandlerService.handleLogout() method in more detail when it is called and for what it can be used.
+
 * 2014-09-16 - tobias.friedrich@open-xchange.com
 
- - Fix for bug 34448: Check presence of Hazelcast Toolkit MBean before querying map statistics 
+ - Fix for bug 34448: Check presence of Hazelcast Toolkit MBean before querying map statistics
 
 * 2014-09-15 - tobias.friedrich@open-xchange.com
 
